--- a/A4/b19098_A4.ipynb
+++ b/A4/b19098_A4.ipynb
@@ -28,14 +28,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Question 1:\na & b:\nConfusion matrix for k = 1\n[[675  48]\n [ 47   6]]\nAccuracy Score is 0.8775773195876289 \n\nConfusion matrix for k = 3\n[[708  15]\n [ 51   2]]\nAccuracy Score is 0.9149484536082474 \n\nConfusion matrix for k = 5\n[[716   7]\n [ 52   1]]\nAccuracy Score is 0.9239690721649485 \n\nQuestion 2:\n"
+      "Question 1:\n",
+      "a & b:\n",
+      "Confusion matrix for k = 1\n",
+      "[[675  48]\n",
+      " [ 47   6]]\n",
+      "Accuracy Score is 0.8775773195876289 \n",
+      "\n",
+      "Confusion matrix for k = 3\n",
+      "[[708  15]\n",
+      " [ 51   2]]\n",
+      "Accuracy Score is 0.9149484536082474 \n",
+      "\n",
+      "Confusion matrix for k = 5\n",
+      "[[716   7]\n",
+      " [ 52   1]]\n",
+      "Accuracy Score is 0.9239690721649485 \n",
+      "\n",
+      "Question 2:\n",
+      "Confusion matrix for k = 1\n",
+      "[[673  50]\n",
+      " [ 42  11]]\n",
+      "Accuracy Score is 0.8814432989690721 \n",
+      "\n",
+      "Confusion matrix for k = 3\n",
+      "[[704  19]\n",
+      " [ 45   8]]\n",
+      "Accuracy Score is 0.9175257731958762 \n",
+      "\n",
+      "Confusion matrix for k = 5\n",
+      "[[713  10]\n",
+      " [ 49   4]]\n",
+      "Accuracy Score is 0.9239690721649485 \n",
+      "\n",
+      "Confusion matrix for k = 1\n",
+      "[[673  50]\n",
+      " [ 42  11]]\n",
+      "Accuracy Score is 0.8814432989690721 \n",
+      "\n",
+      "Confusion matrix for k = 3\n",
+      "[[704  19]\n",
+      " [ 45   8]]\n",
+      "Accuracy Score is 0.9175257731958762 \n",
+      "\n",
+      "Confusion matrix for k = 5\n",
+      "[[713  10]\n",
+      " [ 49   4]]\n",
+      "Accuracy Score is 0.9239690721649485 \n",
+      "\n"
      ]
     }
    ],
@@ -48,7 +95,9 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
     "#1\n",
+    "\n",
     "print('Question 1:')\n",
     "df=pd.read_csv('seismic_bumps.csv')\n",
     "#dropping 8 columns as most values are 0 and are giving singular cov matrix\n",
@@ -61,18 +110,24 @@
     "test = pd.concat((x_test, y_test), axis = 1)\n",
     "train.to_csv('seismic-bumps-train.csv')\n",
     "test.to_csv('seismic-bumps-test.csv')\n",
+    "\n",
     "# a & b\n",
+    "\n",
     "print('a & b:')\n",
-    "for k in range(1,6,2):\n",
-    "    knn1 = KNeighborsClassifier(n_neighbors=k)\n",
-    "    knn1.fit(x_train, y_train)\n",
-    "    y_pred = knn1.predict(x_test)\n",
-    "    print('Confusion matrix for k =', k)\n",
-    "    print(confusion_matrix(y_test, y_pred))\n",
-    "    a = accuracy_score(y_test, y_pred)\n",
-    "    print(\"Accuracy Score is\",a,'\\n')\n",
-    "    \n",
+    "def knnc( x_train, y_train, x_test, y_test): #defining knnc function to see accuracies of different k values\n",
+    "    for k in range(1,6,2):\n",
+    "        knn1 = KNeighborsClassifier(n_neighbors=k)\n",
+    "        knn1.fit(x_train, y_train)\n",
+    "        y_pred = knn1.predict(x_test)\n",
+    "        print('Confusion matrix for k =', k)\n",
+    "        print(confusion_matrix(y_test, y_pred))\n",
+    "        a = accuracy_score(y_test, y_pred)\n",
+    "        print(\"Accuracy Score is\",a,'\\n')\n",
+    "\n",
+    "knnc( x_train, y_train, x_test, y_test) #function call\n",
+    "\n",
     "#2\n",
+    "\n",
     "print('Question 2:')\n",
     "#Min_Max Normalization exluding class attribute\n",
     "x_trainnormal=((x_train-x_train.min())/(x_train.max()-x_train.min()))*(1-0)+0 \n",
@@ -80,9 +135,15 @@
     "#Min_Max Normalization of test data using min, max of train dataset\n",
     "x_testnormal=((x_test-x_train.min())/(x_train.max()-x_train.min()))*(1-0)+0\n",
     "test_normal = pd.concat((x_testnormal,y_test),axis = 1)\n",
-    "\n",
     "train_normal.to_csv('seismic-bumps-train-Normalised.csv')\n",
     "test_normal.to_csv(' seismic-bumps-test-normalised.csv')\n",
+    "\n",
+    "# a & b\n",
+    "\n",
+    "knnc(x_trainnormal, y_train,x_testnormal,y_test)\n",
+    "\n",
+    "#3\n",
+    "\n",
     "\n",
     "\n"
    ]
