removed unwanted imports

--- a/A4/b19098_A4.ipynb
+++ b/A4/b19098_A4.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -68,32 +68,16 @@
       " [ 49   4]]\n",
       "Accuracy Score is 0.9239690721649485 \n",
       "\n",
-      "Confusion matrix for k = 1\n",
-      "[[673  50]\n",
-      " [ 42  11]]\n",
-      "Accuracy Score is 0.8814432989690721 \n",
-      "\n",
-      "Confusion matrix for k = 3\n",
-      "[[704  19]\n",
-      " [ 45   8]]\n",
-      "Accuracy Score is 0.9175257731958762 \n",
-      "\n",
-      "Confusion matrix for k = 5\n",
-      "[[713  10]\n",
-      " [ 49   4]]\n",
-      "Accuracy Score is 0.9239690721649485 \n",
-      "\n"
+      "Question 3:\n",
+      "Question 4:\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.decomposition import PCA\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "#1\n",
@@ -143,8 +127,10 @@
     "knnc(x_trainnormal, y_train,x_testnormal,y_test)\n",
     "\n",
     "#3\n",
+    "print('Question 3:')\n",
     "\n",
-    "\n",
+    "#4\n",
+    "print('Question 4:')\n",
     "\n"
    ]
   },
