--- a/A4/b19098_A4.ipynb
+++ b/A4/b19098_A4.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -38,35 +38,39 @@
       "Question 1:\n",
       "a & b:\n",
       "Confusion matrix for k = 1\n",
-      "[[675  48]\n",
-      " [ 47   6]]\n",
-      "Accuracy Score is 0.8775773195876289 \n",
+      "[[671  54]\n",
+      " [ 46   5]]\n",
+      "Accuracy Score is 0.8711340206185567 \n",
       "\n",
       "Confusion matrix for k = 3\n",
-      "[[708  15]\n",
-      " [ 51   2]]\n",
-      "Accuracy Score is 0.9149484536082474 \n",
+      "[[707  18]\n",
+      " [ 47   4]]\n",
+      "Accuracy Score is 0.9162371134020618 \n",
       "\n",
       "Confusion matrix for k = 5\n",
-      "[[716   7]\n",
-      " [ 52   1]]\n",
-      "Accuracy Score is 0.9239690721649485 \n",
+      "[[718   7]\n",
+      " [ 46   5]]\n",
+      "Accuracy Score is 0.9317010309278351 \n",
+      "\n",
+      "Note:maximum accuracy for k=5\n",
       "\n",
       "Question 2:\n",
       "Confusion matrix for k = 1\n",
-      "[[673  50]\n",
-      " [ 42  11]]\n",
-      "Accuracy Score is 0.8814432989690721 \n",
+      "[[678  47]\n",
+      " [ 42   9]]\n",
+      "Accuracy Score is 0.8853092783505154 \n",
       "\n",
       "Confusion matrix for k = 3\n",
-      "[[704  19]\n",
-      " [ 45   8]]\n",
+      "[[705  20]\n",
+      " [ 44   7]]\n",
       "Accuracy Score is 0.9175257731958762 \n",
       "\n",
       "Confusion matrix for k = 5\n",
-      "[[713  10]\n",
-      " [ 49   4]]\n",
-      "Accuracy Score is 0.9239690721649485 \n",
+      "[[718   7]\n",
+      " [ 48   3]]\n",
+      "Accuracy Score is 0.9291237113402062 \n",
+      "\n",
+      "Note:maximum accuracy for k=5\n",
       "\n",
       "Question 3:\n",
       "Question 4:\n"
@@ -86,10 +90,20 @@
     "df=pd.read_csv('seismic_bumps.csv')\n",
     "#dropping 8 columns as most values are 0 and are giving singular cov matrix\n",
     "df1=df.drop(df.loc[:,'nbumps':'nbumps89'].columns,axis = 1) \n",
-    "x_label=df['class']\n",
-    "y = x_label  #for convenience \n",
-    "x=df1.drop(['class'],axis = 1)\n",
-    "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.3,random_state=42, shuffle=True)\n",
+    "df10=df1[df1['class']==0]\n",
+    "df11=df1[df1['class']==1]\n",
+    "x_label0=df10['class']\n",
+    "x_label1=df11['class']\n",
+    "y0 = x_label0  #for convenience \n",
+    "y1 = x_label1  #for convenience \n",
+    "x0=df10.drop(['class'],axis = 1)\n",
+    "x1=df11.drop(['class'],axis = 1)\n",
+    "x_train0,x_test0,y_train0,y_test0=train_test_split(x0,y0,test_size=0.3,random_state=42, shuffle=True)\n",
+    "x_train1,x_test1,y_train1,y_test1=train_test_split(x1,y1,test_size=0.3,random_state=42, shuffle=True)\n",
+    "x_train = pd.concat((x_train0, x_train1), axis = 0)\n",
+    "x_test = pd.concat((x_test0, x_test1), axis = 0)\n",
+    "y_train = pd.concat((y_train0, y_train1), axis = 0)\n",
+    "y_test = pd.concat((y_test0, y_test1), axis = 0)\n",
     "train = pd.concat((x_train, y_train), axis = 1)\n",
     "test = pd.concat((x_test, y_test), axis = 1)\n",
     "train.to_csv('seismic-bumps-train.csv')\n",
@@ -109,7 +123,7 @@
     "        print(\"Accuracy Score is\",a,'\\n')\n",
     "\n",
     "knnc( x_train, y_train, x_test, y_test) #function call\n",
-    "\n",
+    "print('Note:maximum accuracy for k=5\\n')\n",
     "#2\n",
     "\n",
     "print('Question 2:')\n",
@@ -125,6 +139,7 @@
     "# a & b\n",
     "\n",
     "knnc(x_trainnormal, y_train,x_testnormal,y_test)\n",
+    "print('Note:maximum accuracy for k=5\\n')\n",
     "\n",
     "#3\n",
     "print('Question 3:')\n",
