--- a/A4/b19098_A4.ipynb
+++ b/A4/b19098_A4.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -92,10 +92,8 @@
     "df1=df.drop(df.loc[:,'nbumps':'nbumps89'].columns,axis = 1) \n",
     "df10=df1[df1['class']==0]\n",
     "df11=df1[df1['class']==1]\n",
-    "x_label0=df10['class']\n",
-    "x_label1=df11['class']\n",
-    "y0 = x_label0  #for convenience \n",
-    "y1 = x_label1  #for convenience \n",
+    "y0=df10['class'] #x_label0 \n",
+    "y1=df11['class'] #x_label1\n",
     "x0=df10.drop(['class'],axis = 1)\n",
     "x1=df11.drop(['class'],axis = 1)\n",
     "x_train0,x_test0,y_train0,y_test0=train_test_split(x0,y0,test_size=0.3,random_state=42, shuffle=True)\n",
