--- a/A4/b19098_A4.ipynb
+++ b/A4/b19098_A4.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,65 @@
       "Note:maximum accuracy for k=5\n",
       "\n",
       "Question 3:\n",
-      "Question 4:\n"
+      "seismic               1.335110\n",
+      "seismoacoustic        1.403197\n",
+      "shift                 1.388988\n",
+      "genergy           76209.828301\n",
+      "gpuls               490.056838\n",
+      "gdenergy             12.082297\n",
+      "gdpuls                3.542333\n",
+      "ghazard               1.107164\n",
+      "energy             4941.740675\n",
+      "maxenergy          4374.600355\n",
+      "dtype: float64\n",
+      "seismic                1.495798\n",
+      "seismoacoustic         1.445378\n",
+      "shift                  1.100840\n",
+      "genergy           198697.394958\n",
+      "gpuls                944.823529\n",
+      "gdenergy              17.201681\n",
+      "gdpuls                10.638655\n",
+      "ghazard                1.075630\n",
+      "energy             10278.991597\n",
+      "maxenergy           8246.218487\n",
+      "dtype: float64\n",
+      "                    seismic  seismoacoustic  ...        energy     maxenergy\n",
+      "seismic            0.222943        0.015871  ...  1.306739e+03  1.133043e+03\n",
+      "seismoacoustic     0.015871        0.284611  ... -3.478993e+01  5.744762e+00\n",
+      "shift             -0.058156       -0.018306  ... -9.677273e+02 -7.653510e+02\n",
+      "genergy          341.106150     2326.935383  ...  3.433229e+08  2.717469e+08\n",
+      "gpuls             53.937695       34.331335  ...  2.346354e+06  2.013481e+06\n",
+      "gdenergy           5.440415        8.156964  ...  2.790117e+05  2.705639e+05\n",
+      "gdpuls             4.665308        7.394355  ...  2.782125e+05  2.672028e+05\n",
+      "ghazard            0.016200        0.090652  ... -1.603407e+02 -1.205585e+02\n",
+      "energy          1306.738613      -34.789929  ...  4.681444e+08  4.430992e+08\n",
+      "maxenergy       1133.042772        5.744762  ...  4.430992e+08  4.264027e+08\n",
+      "\n",
+      "[10 rows x 10 columns]\n",
+      "                    seismic  seismoacoustic  ...        energy     maxenergy\n",
+      "seismic            0.252101        0.006124  ...  3.384233e+03  2.889603e+03\n",
+      "seismoacoustic     0.006124        0.299957  ...  1.681470e+03  1.108902e+03\n",
+      "shift             -0.033471       -0.011394  ... -5.393890e+02 -3.894459e+02\n",
+      "genergy          629.014385    -1728.236718  ...  1.436182e+06  1.037600e+08\n",
+      "gpuls             88.588235       -8.963111  ...  9.970005e+05  1.235626e+06\n",
+      "gdenergy           3.280516        7.341618  ... -1.680839e+05 -1.620526e+05\n",
+      "gdpuls             1.663723        7.153824  ... -1.272170e+05 -1.364382e+05\n",
+      "ghazard            0.004558        0.059251  ...  8.058396e+02  8.541020e+02\n",
+      "energy          3384.233015     1681.469876  ...  4.091620e+08  3.419124e+08\n",
+      "maxenergy       2889.602621     1108.901866  ...  3.419124e+08  3.006049e+08\n",
+      "\n",
+      "[10 rows x 10 columns]\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'summarize_by_class' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-b24b80c09419>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     86\u001b[0m                         \u001b[0mprobabilities\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mclass_value\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*=\u001b[0m \u001b[0mcalculate_prob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmean\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcov\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     87\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mprobabilities\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 88\u001b[1;33m \u001b[0msummaries\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msummarize_by_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     89\u001b[0m \u001b[0mprobabilities\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_class_probabilities\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msummaries\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprobabilities\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'summarize_by_class' is not defined"
      ]
     }
    ],
@@ -141,10 +199,21 @@
     "\n",
     "#3\n",
     "print('Question 3:')\n",
+    "meandf0 = x_train0.mean()\n",
+    "meandf1 = x_train1.mean()\n",
+    "covdf0 = x_train0.cov()\n",
+    "covdf1 = x_train1.cov()\n",
+    "print(meandf0)\n",
+    "print(meandf1)\n",
+    "print(covdf0)\n",
+    "print(covdf1)\n",
     "\n",
     "#4\n",
-    "print('Question 4:')\n",
-    "\n"
+    "print('Question 4:')    \n",
+    "data = { 'Classifier': ['K-NN Classifier','K-NN Classifier(normalized data)','Bayes Classifier'],\n",
+    "        'Accuracy Score':[0.9317010309278351,0.9291237113402062,0]}\n",
+    "table = pd.DataFrame(data,columns =['Classifier','Accuracy Score'],index=[1,2,3])\n",
+    "print(table)\n"
    ]
   },
   {
