--- a/A4/b19098_A4.ipynb
+++ b/A4/b19098_A4.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
       " [ 46   5]]\n",
       "Accuracy Score is 0.9317010309278351 \n",
       "\n",
-      "Note:maximum accuracy for k=5\n",
+      "maximum accuracy for k=  5 at  0.9317 \n",
       "\n",
       "Question 2:\n",
       "Confusion matrix for k = 1\n",
@@ -70,68 +70,82 @@
       " [ 48   3]]\n",
       "Accuracy Score is 0.9291237113402062 \n",
       "\n",
-      "Note:maximum accuracy for k=5\n",
+      "maximum accuracy for k=  5 at  0.9291 \n",
       "\n",
       "Question 3:\n",
-      "seismic               1.335110\n",
-      "seismoacoustic        1.403197\n",
-      "shift                 1.388988\n",
-      "genergy           76209.828301\n",
-      "gpuls               490.056838\n",
-      "gdenergy             12.082297\n",
-      "gdpuls                3.542333\n",
-      "ghazard               1.107164\n",
-      "energy             4941.740675\n",
-      "maxenergy          4374.600355\n",
-      "dtype: float64\n",
-      "seismic                1.495798\n",
-      "seismoacoustic         1.445378\n",
-      "shift                  1.100840\n",
-      "genergy           198697.394958\n",
-      "gpuls                944.823529\n",
-      "gdenergy              17.201681\n",
-      "gdpuls                10.638655\n",
-      "ghazard                1.075630\n",
-      "energy             10278.991597\n",
-      "maxenergy           8246.218487\n",
-      "dtype: float64\n",
-      "                    seismic  seismoacoustic  ...        energy     maxenergy\n",
-      "seismic            0.222943        0.015871  ...  1.306739e+03  1.133043e+03\n",
-      "seismoacoustic     0.015871        0.284611  ... -3.478993e+01  5.744762e+00\n",
-      "shift             -0.058156       -0.018306  ... -9.677273e+02 -7.653510e+02\n",
-      "genergy          341.106150     2326.935383  ...  3.433229e+08  2.717469e+08\n",
-      "gpuls             53.937695       34.331335  ...  2.346354e+06  2.013481e+06\n",
-      "gdenergy           5.440415        8.156964  ...  2.790117e+05  2.705639e+05\n",
-      "gdpuls             4.665308        7.394355  ...  2.782125e+05  2.672028e+05\n",
-      "ghazard            0.016200        0.090652  ... -1.603407e+02 -1.205585e+02\n",
-      "energy          1306.738613      -34.789929  ...  4.681444e+08  4.430992e+08\n",
-      "maxenergy       1133.042772        5.744762  ...  4.430992e+08  4.264027e+08\n",
+      "[1.33301303e+03 1.33510953e+00 1.40319716e+00 1.38898757e+00\n",
+      " 7.62098283e+04 4.90056838e+02 1.20822972e+01 3.54233274e+00\n",
+      " 1.10716400e+00 4.94174067e+03 4.37460036e+03]\n",
+      "Confusion Matrix :\n",
+      "[[408  12   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  1   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  6   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 14   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 15   1   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 11   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  6   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 17   3   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 16   1   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  4   3   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  6   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 17   6   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 31   3   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 37  11   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 21   5   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 17   4   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 14   3   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  7   3   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [ 10   5   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  7   3   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  7   1   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  5   9   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  4   6   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  4   3   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  1   3   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  1   1   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  1   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  1   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  1   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   0   0   0   0   0   0   0   0   0   0   0]] \n",
       "\n",
-      "[10 rows x 10 columns]\n",
-      "                    seismic  seismoacoustic  ...        energy     maxenergy\n",
-      "seismic            0.252101        0.006124  ...  3.384233e+03  2.889603e+03\n",
-      "seismoacoustic     0.006124        0.299957  ...  1.681470e+03  1.108902e+03\n",
-      "shift             -0.033471       -0.011394  ... -5.393890e+02 -3.894459e+02\n",
-      "genergy          629.014385    -1728.236718  ...  1.436182e+06  1.037600e+08\n",
-      "gpuls             88.588235       -8.963111  ...  9.970005e+05  1.235626e+06\n",
-      "gdenergy           3.280516        7.341618  ... -1.680839e+05 -1.620526e+05\n",
-      "gdpuls             1.663723        7.153824  ... -1.272170e+05 -1.364382e+05\n",
-      "ghazard            0.004558        0.059251  ...  8.058396e+02  8.541020e+02\n",
-      "energy          3384.233015     1681.469876  ...  4.091620e+08  3.419124e+08\n",
-      "maxenergy       2889.602621     1108.901866  ...  3.419124e+08  3.006049e+08\n",
+      "Accuracy score :\n",
+      "0.5258 \n",
       "\n",
-      "[10 rows x 10 columns]\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'summarize_by_class' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-b24b80c09419>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     86\u001b[0m                         \u001b[0mprobabilities\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mclass_value\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*=\u001b[0m \u001b[0mcalculate_prob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmean\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcov\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     87\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mprobabilities\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 88\u001b[1;33m \u001b[0msummaries\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msummarize_by_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     89\u001b[0m \u001b[0mprobabilities\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_class_probabilities\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msummaries\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprobabilities\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'summarize_by_class' is not defined"
+      "Question 4:\n",
+      "                         Classifier  Accuracy Score\n",
+      "1                   K-NN Classifier          0.9317\n",
+      "2  K-NN Classifier(normalized data)          0.9291\n",
+      "3                  Bayes Classifier          0.5258\n"
      ]
     }
    ],
@@ -148,28 +162,24 @@
     "df=pd.read_csv('seismic_bumps.csv')\n",
     "#dropping 8 columns as most values are 0 and are giving singular cov matrix\n",
     "df1=df.drop(df.loc[:,'nbumps':'nbumps89'].columns,axis = 1) \n",
-    "df10=df1[df1['class']==0]\n",
-    "df11=df1[df1['class']==1]\n",
-    "y0=df10['class'] #x_label0 \n",
-    "y1=df11['class'] #x_label1\n",
-    "x0=df10.drop(['class'],axis = 1)\n",
-    "x1=df11.drop(['class'],axis = 1)\n",
+    "df10,df11=df1[df1['class']==0],df1[df1['class']==1]\n",
+    "y0,y1=df10['class'],df11['class']  #x label\n",
+    "x0,x1=df10.drop(['class'],axis = 1),df11.drop(['class'],axis = 1)\n",
     "x_train0,x_test0,y_train0,y_test0=train_test_split(x0,y0,test_size=0.3,random_state=42, shuffle=True)\n",
     "x_train1,x_test1,y_train1,y_test1=train_test_split(x1,y1,test_size=0.3,random_state=42, shuffle=True)\n",
-    "x_train = pd.concat((x_train0, x_train1), axis = 0)\n",
-    "x_test = pd.concat((x_test0, x_test1), axis = 0)\n",
-    "y_train = pd.concat((y_train0, y_train1), axis = 0)\n",
-    "y_test = pd.concat((y_test0, y_test1), axis = 0)\n",
-    "train = pd.concat((x_train, y_train), axis = 1)\n",
-    "test = pd.concat((x_test, y_test), axis = 1)\n",
+    "x_train,x_test = pd.concat((x_train0, x_train1), axis = 0),pd.concat((x_test0, x_test1), axis = 0)\n",
+    "y_train,y_test = pd.concat((y_train0, y_train1), axis = 0),pd.concat((y_test0, y_test1), axis = 0)\n",
+    "train,test = pd.concat((x_train, y_train), axis = 1),pd.concat((x_test, y_test), axis = 1)\n",
     "train.to_csv('seismic-bumps-train.csv')\n",
     "test.to_csv('seismic-bumps-test.csv')\n",
     "\n",
     "# a & b\n",
     "\n",
     "print('a & b:')\n",
+    "BestAcc = []\n",
     "def knnc( x_train, y_train, x_test, y_test): #defining knnc function to see accuracies of different k values\n",
-    "    for k in range(1,6,2):\n",
+    "    bestA = 0\n",
+    "    for k in [1,3,5]:\n",
     "        knn1 = KNeighborsClassifier(n_neighbors=k)\n",
     "        knn1.fit(x_train, y_train)\n",
     "        y_pred = knn1.predict(x_test)\n",
@@ -177,9 +187,15 @@
     "        print(confusion_matrix(y_test, y_pred))\n",
     "        a = accuracy_score(y_test, y_pred)\n",
     "        print(\"Accuracy Score is\",a,'\\n')\n",
+    "        if a > bestA:\n",
+    "            bestA = round(a,4)\n",
+    "            bestk = k\n",
+    "    BestAcc.append(bestA)\n",
+    "    print('maximum accuracy for k= ', bestk,'at ',bestA, '\\n')\n",
     "\n",
     "knnc( x_train, y_train, x_test, y_test) #function call\n",
-    "print('Note:maximum accuracy for k=5\\n')\n",
+    "\n",
+    "\n",
     "#2\n",
     "\n",
     "print('Question 2:')\n",
@@ -195,23 +211,44 @@
     "# a & b\n",
     "\n",
     "knnc(x_trainnormal, y_train,x_testnormal,y_test)\n",
-    "print('Note:maximum accuracy for k=5\\n')\n",
     "\n",
     "#3\n",
     "print('Question 3:')\n",
-    "meandf0 = x_train0.mean()\n",
-    "meandf1 = x_train1.mean()\n",
-    "covdf0 = x_train0.cov()\n",
-    "covdf1 = x_train1.cov()\n",
-    "print(meandf0)\n",
-    "print(meandf1)\n",
-    "print(covdf0)\n",
-    "print(covdf1)\n",
     "\n",
+    "X_train=pd.read_csv('seismic-bumps-train.csv')\n",
+    "X_test=pd.read_csv('seismic-bumps-test.csv')\n",
+    "\n",
+    "C0=X_train[X_train['class']==0][X_train.columns[0:-1]]\n",
+    "Mean_C0=C0.mean().values;Cov_C0=C0.cov().values\n",
+    "\n",
+    "C1=X_train[X_train['class']==1][X_train.columns[0:-1]]\n",
+    "Mean_C1=C1.mean().values;Cov_C1=C1.cov().values\n",
+    "P_C0=len(C0)/(len(C0)+len(C1))\n",
+    "P_C1=len(C1)/(len(C0)+len(C1))\n",
+    "d=len(X_test.columns)-1\n",
+    "\n",
+    "Predicted_class=[]\n",
+    "for x in X_test[X_test.columns[0:-1]].values:\n",
+    "    \n",
+    "    p_x_C0=1/(((2*np.pi)**(d/2))*np.linalg.det(Cov_C0)**0.5)*np.e**(-0.5*np.dot(np.dot((x-Mean_C0).T,np.linalg.inv(Cov_C0)),(x-Mean_C0)))\n",
+    "    p_x_C1=1/(((2*np.pi)**(d/2))*np.linalg.det(Cov_C1)**0.5)*np.e**(-0.5*np.dot(np.dot((x-Mean_C1).T,np.linalg.inv(Cov_C1)),(x-Mean_C1)))\n",
+    "    P_x=p_x_C0*P_C0+p_x_C1*P_C1\n",
+    "    \n",
+    "    P_C0_x=p_x_C0*P_C0/P_x\n",
+    "    P_C1_x=p_x_C1*P_C1/P_x\n",
+    "    \n",
+    "    if P_C0_x>P_C1_x:Predicted_class.append(0)\n",
+    "    else:Predicted_class.append(1)\n",
+    "    \n",
+    "print('Confusion Matrix :')\n",
+    "print(confusion_matrix(x_test[x_test.columns[-1]],Predicted_class),'\\n')\n",
+    "print('Accuracy score :')\n",
+    "print(round(accuracy_score(x_test[x_test.columns[-1]],Predicted_class),4),'\\n')\n",
+    "BestAcc.append(round(accuracy_score(x_test[x_test.columns[-1]],Predicted_class),4))\n",
     "#4\n",
     "print('Question 4:')    \n",
     "data = { 'Classifier': ['K-NN Classifier','K-NN Classifier(normalized data)','Bayes Classifier'],\n",
-    "        'Accuracy Score':[0.9317010309278351,0.9291237113402062,0]}\n",
+    "        'Accuracy Score':BestAcc}\n",
     "table = pd.DataFrame(data,columns =['Classifier','Accuracy Score'],index=[1,2,3])\n",
     "print(table)\n"
    ]
